# PhyzViz

./: .gitignore  Cargo.toml  README.md  build_wasm.sh  commands.md
.github/workflows/: deploy.yml  main.yml
examples/: basic-double-pendulum.rs  basic-pendulum.rs  double-pendulum.rs  lorenz.rs  pendulum-cart.rs  pendulum.rs  ribbon-double-pendulum.rs  ribbon-pendulum.rs
src/utils/: ODEs.rs  graph.rs  mesh_ribbon.rs  mod.rs  ribbon.rs  rk4.rs
