[package]
name = "PhyzViz"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
# bevy = { version = "0.17.2", default-features = false, features = [
#   "bevy_winit",
#   "bevy_render",
#   "bevy_core_pipeline",
#   "bevy_post_process",
#   "bevy_sprite",
#   "bevy_text",
#   "bevy_asset",
#   "bevy_ui",
#   "bevy_dev_tools",
#   "png",
#   "tonemapping_luts",
#   # "x11",
#   "wayland",
#   "zstd_rust",
#   "webgl2"

# ] }
bevy = { version = "0.17.2", features = ["bevy_dev_tools"] }
bevy_hanabi = { version = "0.17", default-features = false, features = ["2d"] }
bevy_vector_shapes = { version = "0.11" }

[profile.release-wasm]
inherits = "release"
opt-level = 3       # prioritize speed
lto = "fat"         # cross-crate inlining/DCE (often helps perf)
codegen-units = 1   # helps LTO, improves perf
panic = "abort"
debug = 0
strip = "symbols"
