[package]
name = "PhyzViz"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
bevy = { version = "0.17.2", features = ["bevy_dev_tools"] }
bevy_vector_shapes = { version = "0.11" }

[profile.release-wasm]
inherits = "release"
opt-level = 3       # prioritize speed
lto = "fat"         # cross-crate inlining/DCE (often helps perf)
codegen-units = 1   # helps LTO, improves perf
panic = "abort"
debug = 0
strip = "symbols"

[features]
default = []
fps_overlay = []
